--- a/src/app/routes/dashboard/dashboard.html
+++ b/src/app/routes/dashboard/dashboard.html
@@ -91,7 +91,7 @@
             <img class="d-block w-full" src="images/pixabay/16.jpg" alt="" />
             <h3>
               Maecenas eget turpis luctus, scelerisque arcu id, iaculis urna. Interdum et malesuada
-              fames ac ante ipsum primis in faucibus.
+              fames ac ante ipsum primis in faucibus
             </h3>
             <p>
               Morbi placerat est nec pharetra placerat. Ut laoreet nunc accumsan orci aliquam
