--- a/src/app/shared/components/error-code/error-code.scss
+++ b/src/app/shared/components/error-code/error-code.scss
@@ -11,8 +11,8 @@
     long-shadow.long-shadow(
       $direction: 45deg,
       $length: 3.75rem,
-      $color: rgba(0, 0, 0, .03),
-      $fade: rgba(0, 0, 0, .0015),
+      $color: rgb(0 0 0 / .03),
+      $fade: rgb(0 0 0 / .0015),
       $shadow-count: 20
     );
 }
