--- a/src/app/theme/admin-layout/admin-layout.html
+++ b/src/app/theme/admin-layout/admin-layout.html
@@ -7,6 +7,7 @@
   [class.matero-header-fixed]="options.headerPos === 'fixed'"
   [dir]="options.dir"
 >
+  <app-branding class="matero-branding-top" />
   <ng-progress ngProgressRouter />
 
   <!-- Header Above -->
@@ -36,7 +37,7 @@
       />
     </mat-sidenav>
 
-    <mat-sidenav #sidenavNotice position="end" mode="over">
+    <mat-sidenav #sidenavNotice position="end" mode="over" class="matero-notice-drawer">
       <app-sidebar-notice />
     </mat-sidenav>
 
@@ -59,7 +60,4 @@
       </main>
     </mat-sidenav-content>
   </mat-sidenav-container>
-
-  <!-- Demo purposes only -->
-  <app-customizer (optionsChange)="updateOptions($event)" />
 </div>
