--- a/src/app/theme/header/header.scss
+++ b/src/app/theme/header/header.scss
@@ -4,6 +4,10 @@
   position: relative;
   z-index: 200;
   display: block;
-  background-color: var(--header-background-color);
-  backdrop-filter: blur(8px);
+  background-color: rgb(255 255 255 / 0.5);
+  backdrop-filter: blur(12px);
+
+  .theme-dark & {
+    background-color: rgb(5 22 26 / 0.5);
+  }
 }
