--- a/src/app/routes/profile/layout/layout.html
+++ b/src/app/routes/profile/layout/layout.html
@@ -1,4 +1,4 @@
-<page-header class="bg-dark text-light" title="{{ 'profile' | translate }}" />
+<page-header title="Profile" [hideBreadcrumb]="true" />
 
 <div class="row">
   <div class="col-sm-4 col-md-4 col-lg-3">
