--- a/src/app/routes/profile/settings/settings.html
+++ b/src/app/routes/profile/settings/settings.html
@@ -1,138 +1,109 @@
-<mat-card>
-  <mat-card-header class="m-b-16">
+<mat-card class="settings-card">
+  <mat-card-header class="m-b-24">
     <mat-card-title>Edit Profile</mat-card-title>
+    <mat-card-subtitle>
+      Update your personal information to keep your profile current.
+    </mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content>
-    <form [formGroup]="reactiveForm" class="form-field-full">
+    <form [formGroup]="form" class="form-field-full">
       <div class="row">
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Username</mat-label>
-            <input matInput placeholder="Simple placeholder" formControlName="username" required />
-            @if (reactiveForm.get('username')?.invalid) {
-              <mat-error>Please enter username</mat-error>
-            }
+        <!-- Basic Info -->
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Full Name</mat-label>
+            <input matInput formControlName="name" required />
+            <mat-icon matSuffix>person</mat-icon>
           </mat-form-field>
         </div>
 
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Simple placeholder" formControlName="email" required />
-            @if (reactiveForm.get('email')?.invalid) {
-              <mat-error>{{ getErrorMessage(reactiveForm) }}</mat-error>
-            }
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Email Address</mat-label>
+            <input matInput formControlName="email" type="email" required />
+            <mat-icon matSuffix>email</mat-icon>
           </mat-form-field>
         </div>
 
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Date of Birth</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="dateOfBirth" required />
+            <mat-datepicker-toggle matSuffix [for]="picker" />
+            <mat-datepicker #picker />
+          </mat-form-field>
+        </div>
+
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
             <mat-label>Gender</mat-label>
             <mat-select formControlName="gender" required>
-              <mat-option>-- None --</mat-option>
-              <mat-option value="1">male</mat-option>
-              <mat-option value="2">female</mat-option>
+              @for (g of genders; track g) {
+                <mat-option [value]="g">{{ g }}</mat-option>
+              }
             </mat-select>
-            @if (reactiveForm.get('gender')?.invalid) {
-              <mat-error>Please select gender</mat-error>
-            }
           </mat-form-field>
         </div>
 
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>City</mat-label>
-            <input matInput placeholder="Simple placeholder" formControlName="city" required />
-            @if (reactiveForm.get('city')?.invalid) {
-              <mat-error>Please enter city</mat-error>
-            }
+        <!-- Academic & Contact -->
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Education Level</mat-label>
+            <mat-select formControlName="educationLevel" required>
+              @for (level of educationLevels; track level) {
+                <mat-option [value]="level">{{ level }}</mat-option>
+              }
+            </mat-select>
           </mat-form-field>
         </div>
 
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Address</mat-label>
-            <input matInput placeholder="Simple placeholder" formControlName="address" required />
-            @if (reactiveForm.get('address')?.invalid) {
-              <mat-error>Please enter address</mat-error>
-            }
-          </mat-form-field>
-        </div>
-
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Company</mat-label>
-            <input matInput placeholder="Simple placeholder" formControlName="company" required />
-            @if (reactiveForm.get('company')?.invalid) {
-              <mat-error>Please enter company</mat-error>
-            }
-          </mat-form-field>
-        </div>
-
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Mobile</mat-label>
-            <input
-              matInput
-              placeholder="Simple placeholder"
-              type="number"
-              formControlName="mobile"
-              required
-            />
-            <mat-icon matSuffix>smartphone</mat-icon>
-            @if (reactiveForm.get('mobile')?.invalid) {
-              <mat-error>Please enter mobile</mat-error>
-            }
-          </mat-form-field>
-        </div>
-
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Tele</mat-label>
-            <input
-              matInput
-              placeholder="Simple placeholder"
-              type="number"
-              formControlName="tele"
-              required
-            />
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Phone Number</mat-label>
+            <input matInput formControlName="phone" required />
             <mat-icon matSuffix>phone</mat-icon>
-            @if (reactiveForm.get('tele')?.invalid) {
-              <mat-error>Please enter tele</mat-error>
-            }
           </mat-form-field>
         </div>
 
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <mat-label>Website</mat-label>
-            <input matInput placeholder="Simple placeholder" formControlName="website" required />
-            @if (reactiveForm.get('website')?.invalid) {
-              <mat-error>Please enter website</mat-error>
-            }
+        <!-- Location -->
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Country</mat-label>
+            <mat-select formControlName="country" required>
+              @for (c of countries; track c) {
+                <mat-option [value]="c">{{ c }}</mat-option>
+              }
+            </mat-select>
           </mat-form-field>
         </div>
 
-        <div class="col-sm-6 col-xl-4">
-          <mat-form-field>
-            <input
+        <div class="col-sm-6">
+          <mat-form-field appearance="outline">
+            <mat-label>City</mat-label>
+            <input matInput formControlName="city" required />
+            <mat-icon matSuffix>location_on</mat-icon>
+          </mat-form-field>
+        </div>
+
+        <!-- Bio -->
+        <div class="col-12 text-textarea">
+          <mat-form-field appearance="outline">
+            <mat-label>Short Bio</mat-label>
+            <textarea
               matInput
-              [matDatepicker]="picker2"
-              placeholder="Choose a date"
-              formControlName="date"
-            />
-            <mat-datepicker-toggle matSuffix [for]="picker2" />
-            <mat-datepicker #picker2 />
-            @if (reactiveForm.get('date')?.invalid) {
-              <mat-error>Please enter website</mat-error>
-            }
+              formControlName="bio"
+              rows="4"
+              placeholder="Tell us a bit about yourself..."
+            ></textarea>
           </mat-form-field>
         </div>
       </div>
 
-      <div class="d-flex justify-content-end">
-        <button matButton="filled">Save</button>
+      <div class="d-flex justify-content-end m-t-16">
+        <button mat-flat-button color="primary" (click)="save()" [disabled]="form.invalid">
+          Save Changes
+        </button>
       </div>
     </form>
   </mat-card-content>
