--- a/src/app/theme/sidebar/sidebar.scss
+++ b/src/app/theme/sidebar/sidebar.scss
@@ -1,27 +1,21 @@
 @use '../../../styles/grid/breakpoints';
 
-.matero-sidebar-header {
-  overflow: hidden;
 
-  mat-toolbar {
-    width: var(--sidenav-width);
-    padding: 0 0.5rem;
-    background: transparent !important;
-  }
-
-  // Remove redundant padding in the slide toggle
-  mat-slide-toggle .mdc-label {
-    display: none;
-  }
-}
 
 .matero-sidebar-main {
-  height: calc(100% - var(--mat-toolbar-standard-height));
-  padding: 0 0.5rem 0.5rem;
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  padding: 1rem 0.5rem;
+  overflow: visible !important;
   scrollbar-width: none;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   @include breakpoints.bp-lt(small) {
-    height: calc(100% - var(--mat-toolbar-mobile-height));
+    height: auto;
   }
 }
