--- a/src/app/theme/sidebar/sidebar.scss
+++ b/src/app/theme/sidebar/sidebar.scss
@@ -19,3 +19,9 @@
     height: auto;
   }
 }
+
+/* footer area for logout, sticks to bottom */
+.matero-sidebar-footer {
+  padding: 0.5rem 1rem;
+  margin-top: auto;
+}
